Bug 137013 - Writer search dialog doesn't close after pressing the ESC button
Summary: Writer search dialog doesn't close after pressing the ESC button
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-09-25 06:36 UTC by NISZ LibreOffice Team
Modified: 2020-11-17 10:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-09-25 06:36:31 UTC
Description:
Writer search dialog doesn't close after pressing the ESC button, instead the searched text loses the highlight.

Steps to Reproduce:
1. Open Writer
2. Type something
2. Press CTRL+F and search for the text you typed (press enter)
3. Press ESC

Actual Results:
The searched text loses the highlight and the search box remained open.

Expected Results:
The searched text highlighting should remain and the search box should close.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 0f99330f33868594ad253656805918115823f59d
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 Attila Baraksó (NISZ) 2020-09-25 06:42:44 UTC
Bibisected using linux-64-7.1 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=6f7f5f280abaf4ee84472359acd4952b2eea40a4
author: Jim Raykowski <raykowj@gmail.com>
committer: Jim Raykowski <raykowj@gmail.com>
summary: tdf#132366 Writer enhancement that highlights search results

Adding CC: Jim Raykowski
Comment 2 Attila Baraksó (NISZ) 2020-09-25 07:14:43 UTC
Reproduced in:

Version: 7.1.0.0.alpha0+
Build ID: 121771e37f7e2de41cd5643475861062bf25627b
CPU threads: 6; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-GB (hu_HU.UTF-8); UI: en-US
Calc: threaded

and in:

Version: 7.1.0.0.alpha0+ (x64)
Build ID: d237230ea014ba7a792c5ebccab28abe09868fc7
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 3 Jim Raykowski 2020-09-25 08:00:31 UTC
Setting focus to the document was done so Navigator will outline track the find and clear any outline highlighting in the Navigator as a result of a previous find all. WIP to make this work as expected where focus stays in find text combobox when enter is pressed.
Comment 4 Jim Raykowski 2020-09-27 05:26:56 UTC
Here is a patch to fix the regressions introduced by the enhancement patch tdf#132366

https://gerrit.libreoffice.org/c/core/+/103499
Comment 5 Commit Notification 2020-09-30 03:22:47 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f4f0ea6a41e99e12812a791f732694c8e86acb8c

tdf#137013 fix Writer find toolbar ui regressions

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Attila Baraksó (NISZ) 2020-10-01 07:00:39 UTC
Verified in: 

Version: 7.1.0.0.alpha0+ (x64)
Build ID: dda71436b8594fb0669b3ac06c02a3997a0674be
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL

@Jim: Thanks for fixing this issue!