tdf#137013 fix Writer find toolbar ui regressions

introduced by enhancement patch tdf#132366

Change-Id: I951fcd7891c75e7fbf715581c316b4446d967cd9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/103499
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>